Fixes problem with modalHolder no-drag property stopping dragging when it overlapped the app bar.

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -4397,7 +4397,6 @@ input[type="checkbox"].fieldItem:checked + label .togLabelOff {
   top: 0;
   width: 100%;
   height: 100%;
-  -webkit-app-region: no-drag;
   pointer-events: none;
 }
 
